--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,6 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-
         android:theme="@style/AppTheme">
         <activity
             android:name=".SubjectsActivity"
@@ -62,7 +61,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".AboutUsActivity"
             android:screenOrientation="portrait" />
@@ -70,5 +68,7 @@
         <activity
             android:name=".PredictorActivity"
             android:screenOrientation="portrait" />
+        <activity android:name=".PrevAttActivity"></activity>
     </application>
+
 </manifest>
